Sat Jul 27 13:01:44 2002  Tim Janik  <timj@gtk.org>

	* beast-gtk/images/: new directory containing images.
	added excellent images (logo, splash, mime-type, etc.) from
	Jakub Steiner.

	* NEWS: updates.

	* configure.in: provide BST_VERSION_STABLE and BST_PATH_IMAGES,
	fix BST_PATH_SAMPLES. upgrade version hint from Pre-ALPHA to ALPHA.

	* beast-gtk/bstsplash.[hc]: splash dialog implementation.

	* beast-gtk/bstdialog.c: add to status bar stack upon show if it's
	empty.

	* beast-gtk/bstmain.c: fire up splash screen. show dialogs as
	early as possible. special case development command line options.

	* docs/generated/release-notes.dat: updates.

	* beast-gtk/bstparamview.c (bst_param_view_rebuild): properly honour
	type ranges as set by bst_param_view_set_mask() (fixes the BSE
	options in the preferences dialog).

Sat Jul 27 07:49:48 2002  Tim Janik  <timj@gtk.org>

	* bststest.c: adapt to new GSL data handle API.

	* bstwaveeditor.[hc]: major code cleanup, adapt to new GSL data handle API.

Thu Jul 25 01:25:35 2002  Tim Janik  <timj@gtk.org>

	* beast-gtk/bststest.c: gsl_wave_handle_new() updates.

	* doc updates.

Tue Jul 23 08:12:54 2002  Tim Janik  <timj@gtk.org>

	* beast-gtk/icons/music-cut.png: minor icon fixup.

	* beast-gtk/Makefile.am: remove unused code from build list, regarding
	patterns, instruments and effects.

	* bstapp.c: menu changes to reflect part/track usage vs. patterns
	and instruments.

	* bstkeytables.c: disable pattern editor dependancies.

	* bstparam.c: there's no fundamental type BSE_TYPE_NOTE anymore.

	* bstpartdialog.c: extend menu with newly added cut/copy/paste/clear
	functions.

	* bstpartdialog.c:
	* bstpianoroll.[hc]:
	* bstpianorollctrl.[hc]: port this over to use notes instead of
	frequencies, bug fixes.

	* bstsongshell.[hc]: remove dependancies on unused code.

	* bsttrackview.c: properly deal with track removal during playback.

	* bsw/bswproxy.[hc]: wrap BSE_NOTE_*() macros, get rid of BSE_TYPE_NOTE
	fundamental.
